[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hitchpylibrarytoolkit"]

[project]
name = "hitchpylibrarytoolkit"
authors = [
    {name = "Colm O'Connor", email = "colm.oconnor.github@gmail.com"},
]
description = "Build, test, documentation, linting, reformatting and specification code for hitch libraries."
license = {text = "MIT"}
requires-python = ">=3.7.0"
keywords = ["yaml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: English",
]
dependencies = [
    # "hitchstory==0.12.0",
    # "hitchrunpy==0.11.3",
    # "icommandlib==0.6.0",
    # "hitchbuild",
    # "dirtempl==0.1.3",
    # "templex==0.2.0",
    # "twine>=0.11.0",
    # "flake8>=3.5.0",
    # "pip-tools>=6.12.3",
    # "orji",
    # "gitpython",
    # "black",
    # "ipython",
    # "q>=2.6",
    # "wheel",
    # "click",
    # "tomli",
    # "natsort",
    "asttokens==2.2.1",
    "backcall==0.2.0",
    "black==23.3.0",
    "bleach==6.0.0",
    "build==0.10.0",
    "certifi==2022.12.7",
    "cffi==2.0.0",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "commandlib==0.3.5",
    "cryptography==46.0.5",
    "decorator==5.1.1",
    "dirtempl==0.1.3",
    "docutils==0.19",
    "executing==1.2.0",
    "flake8==6.0.0",
    "gitdb==4.0.10",
    "gitpython==3.1.31",
    "hitchbuild==0.6.3",
    "hitchrunpy==0.11.3",
    "hitchstory==0.20.1",
    "icommandlib==0.6.1",
    "idna==3.4",
    "importlib-metadata==6.2.0",
    "ipython==8.12.0",
    "jaraco-classes==3.2.3",
    "jedi==0.18.2",
    "jeepney==0.8.0",
    "jinja2==3.1.2",
    "keyring==23.13.1",
    "markdown-it-py==2.2.0",
    "markupsafe==2.1.2",
    "matplotlib-inline==0.1.6",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "more-itertools==9.1.0",
    "mypy-extensions==1.0.0",
    "packaging==23.0",
    "parso==0.8.3",
    "path==16.6.0",
    "path-py==12.5.0",
    "pathquery==0.3.0",
    "pathspec==0.11.1",
    "peewee==3.16.0",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pip-tools==6.13.0",
    "pkginfo==1.9.6",
    "platformdirs==3.2.0",
    "prettystack==0.4.0",
    "prompt-toolkit==3.0.38",
    "psutil==5.9.4",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycodestyle==2.10.0",
    "pycparser==2.21",
    "pyflakes==3.0.1",
    "pygments==2.14.0",
    "pyproject-hooks==1.0.0",
    "pyte==0.8.1",
    "python-dateutil==2.8.2",
    "python-slugify==8.0.1",
    "q==2.7",
    "readme-renderer==37.3",
    "requests==2.28.2",
    "requests-toolbelt==0.10.1",
    "rfc3986==2.0.0",
    "rich==13.3.3",
    "secretstorage==3.3.3",
    "six==1.16.0",
    "smmap==5.0.0",
    "stack-data==0.6.2",
    "strictyaml==1.7.3",
    "templex==0.2.0",
    "text-unidecode==1.3",
    "tomli==2.0.1",
    "traitlets==5.9.0",
    "twine==4.0.2",
    "urllib3==1.26.15",
    "uvloop==0.22.1",
    "wcwidth==0.2.6",
    "webencodings==0.5.1",
    "wheel==0.40.0",
    "zipp==3.15.0",
    "natsort==8.4.0",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://hitchdev.com/"

[tool.setuptools.dynamic]
readme = {file = ["README.md",], content-type = "text/markdown"}
version = {file = "VERSION"}
